--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <h2>HAPPY</h2>
 
           <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
-          <h4>| FROM <span style="font-weight:bold;DESPICABLE ME 2 |</h4>
+          <h4>| FROM <span style="font-weight:bold;padding-top:0">DESPICABLE ME 2</span> |</h4>
 
         </div>
       </div>
