--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
       <div id="back" class="album">
 
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
-        <h3></h3>
+        <h3>| FROM <span style="font-weight:bold;padding-top:0">DESPICABLE ME 2</span> |</h3>
+        
         <!-- Level 1 'HAPPY' Header -->
-
+        <h1>HAPPY</h1>
+        
         <!-- Level 3 'WRITTEN BY...' Header -->
+        <h3></h3>
 
         <!-- pararaph text 'PUBLISHED BY...' -->
 
