--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <p style="letter-spacing:0.03em">PUBLISHED BY EMI APRIL MUSIC, INC. OBO ITSELF AND MORE WATERFROM NAZARETH (ASCAP) / UNIVERSAL PICTURES MUSIC (ASCAP) | BACKGROUND VOCALS PERFORMED BY RHEA DUMMETT, TREVON HENDERSON, ASHLEY L. LEE, SHAMIKA HIGHTOWER, JASMINE MURRAY AND TERRENCE ROLLE | PRODUCED BY PHARRELL WILLIAMS | RECORDED BY MIKE LARSON FOR I AM OTHER ENTERTAINMENT AT CIRCLE HOUSE STUDIOS, MIAMI, FL | ASSISTED BY MATTHEW DESRAMEAUX | DIGITAL EDITING AND ARRANGEMENT BY ANDREW COLEMAN AND MIKE LARSON FOR I AM OTHER ENTERTAINMENT | MIXED BY LESLIE BRATHWAITE AT MUSIC BOX STUDIOS, ATLANTA, GA.</p>
 
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
-        <span style="tabindex:1;padding-top:15">PHARRELLWILLIAMS.COM</span> <span style="tabindex:2"><img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png"></span> <span style="tabindex:3padding-top:15">COLUMBIARECORDS.COM</span>
+        <span style="tabindex:1;padding-top:15">PHARRELLWILLIAMS.COM</span> <span style="tabindex:2;padding-top:0"><img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png"></span> <span style="tabindex:3padding-top:15">COLUMBIARECORDS.COM</span>
         
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
 
